--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>TensorFlow.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/presentation-tensorflowjs.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -24,8 +25,77 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section class="slide" data-background="white">
+					<h1 class="slide-heading logo">
+						<img class="image image-in-center" src="./images/logo.png" alt="Logo" width="120" height="120">
+						TensorFlow<span class="logo-part">.js</span>
+					</h1>
+					<h2 class="speaker slide-heading">Speaker: Dzmitry Tsebruk</h2>
+				</section>
+				<section>
+					<section class="slide question" data-background="rgb(255, 102, 0)">
+						<h2 class="slide-heading">What is TensorFlow?</h2>
+					</section>
+					<section class="slide">
+						<h2 class="slide-heading">An <a href="https://www.tensorflow.org/" target="_blank">official site</a> says:</h2>
+						<blockquote cite="https://www.tensorflow.org/">
+							“This is an open source machine learning framework for everyone”
+						</blockquote>
+					</section>
+					<section class="slide">
+						<h2 class="slide-heading">History timeline</h2>
+						<br>
+						<p class="fragment fade-in-then-semi-out fragment-with-year">
+							<span class="year thick-text marked-text">2011</span>
+							<span class="image-description">Propriatory library DistBelief</span>
+						</p>
+						<p class="fragment fade-in-then-semi-out fragment-with-arrow">⬇</p>
+						<p class="fragment fade-in-then-semi-out fragment-with-year">
+							<span class="year thick-text marked-text">2015</span>
+							<span class="image-description">It was open sourced</span>
+						</p>
+						<p class="fragment fade-in-then-semi-out fragment-with-arrow">⬇</p>
+						<p class="fragment fade-in-then-semi-out fragment-with-year">
+							<span class="year thick-text marked-text">2017</span>
+							<span class="image-description">Version 1.0 of TensorFlow</span>
+						</p>
+					</section>
+					<section class="slide">
+						<h2 class="slide-heading">Languages Support</h2>
+						<p class="fragment">
+							<img class="image image-in-center" src="./images/logo.png" alt="Logo" width="120" height="120">
+							<span class="image-description shaded-text">It is a low-level C++ library</span>
+						</p>
+						<p class="fragment fade-in-then-semi-out smaller-text thick-text">Python</p>
+						<p class="fragment fade-in-then-semi-out smaller-text thick-text">Java</p>
+						<p class="fragment fade-in-then-semi-out smaller-text thick-text">C</p>
+						<p class="fragment fade-in-then-semi-out smaller-text thick-text">Go</p>
+						<p class="fragment fade-in-then-semi-out smaller-text thick-text">Swift</p>
+						<p class="fragment fade-in-then-semi-out smaller-text thick-text marked-text">JavaScript</p>
+					</section>
+					<section class="slide">
+						<h2 class="slide-heading">Platforms Support</h2>
+						<table>
+							<tr>
+								<td>
+									<div class="fragment fade-in">
+										<h3 class="slide-heading marked-text thick-text">Desktop</h3>
+										<p class="fragment fade-in-then-semi-out smaller-text">Windows</p>
+										<p class="fragment fade-in-then-semi-out smaller-text">MacOS</p>
+										<p class="fragment fade-in-then-semi-out smaller-text">Linux</p>
+									</div>
+								</td>
+								<td>
+									<div class="fragment fade-in">
+										<h3 class="slide-heading marked-text thick-text">Mobile</h3>
+										<p class="fragment fade-in-then-semi-out smaller-text">Android</p>
+										<p class="fragment fade-in-then-semi-out smaller-text">iOS</p>
+									</div>
+								</td>
+							</tr>
+						</table>
+					</section>
+				</section>
 			</div>
 		</div>
 
