feat: add some images and slides

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 						<h2 class="slide-heading">Languages Support</h2>
 						<p class="fragment">
 							<img class="image image-in-center" src="./images/logo.png" alt="Logo" width="120" height="120">
-							<span class="image-description shaded-text">It is a low-level C++ library</span>
+							<span class="image-description thick-text marked-text">Low-level C++ library</span>
 						</p>
-						<p class="fragment fade-in-then-semi-out smaller-text thick-text">Python</p>
-						<p class="fragment fade-in-then-semi-out smaller-text thick-text">Java</p>
-						<p class="fragment fade-in-then-semi-out smaller-text thick-text">C</p>
-						<p class="fragment fade-in-then-semi-out smaller-text thick-text">Go</p>
-						<p class="fragment fade-in-then-semi-out smaller-text thick-text">Swift</p>
-						<p class="fragment fade-in-then-semi-out smaller-text thick-text marked-text">JavaScript</p>
+						<p class="fragment fade-in-then-semi-out smaller-text">Python</p>
+						<p class="fragment fade-in-then-semi-out smaller-text">Java</p>
+						<p class="fragment fade-in-then-semi-out smaller-text">C</p>
+						<p class="fragment fade-in-then-semi-out smaller-text">Go</p>
+						<p class="fragment fade-in-then-semi-out smaller-text">Swift</p>
+						<p class="fragment fade-in-then-semi-out smaller-text">JavaScript</p>
 					</section>
 					<section class="slide">
 						<h2 class="slide-heading">Platforms Support</h2>
@@ -94,6 +94,52 @@
 								</td>
 							</tr>
 						</table>
+					</section>
+				</section>
+				<section>
+					<section class="slide question" data-background="rgb(255, 102, 0)">
+						<h2 class="slide-heading">And what about TensorFlow.js?</h2>
+					</section>
+					<section class="slide">
+						<h2 class="slide-heading">Client-Server Architecture</h2>
+						<img class="image" src="./images/client-server-architecture.png" alt="Logo">
+					</section>
+					<section class="slide">
+						<h2 class="slide-heading">Deeplearn.js</h2>
+						<p class="marked-text thick-text">August 2017</p>
+						<ul class="shaded-text">
+							<li>Machine Learning in JavaScript!</li>
+							<li>API hassle free</li>
+						</ul>
+					</section>
+					<section class="slide">
+						<h2 class="slide-heading">Deeplearn.js</h2>
+						<p class="fragment fade-in-then-semi-out">⬇</p>
+						<p class="fragment fade-in-then-semi-out marked-text thick-text">Low speed of computing</p>
+						<p class="fragment fade-in-then-semi-out">⬇</p>
+						<p class="fragment fade-in-then-semi-out grow">WebGL</p>
+					</section>
+					<section class="slide">
+						<p class="thick-text marked-text">March 2018</p>
+						<p class="fragment fade-in-then-semi-out">⬇</p>
+						<p class="fragment fade-in-then-semi-out">Deeplearn.js + TensorFlow</p>
+						<p class="fragment fade-in-then-semi-out">⬇</p>
+						<h2 class="fragment fade-in-then-semi-out slide-heading logo">
+							<img class="image image-in-center" src="./images/logo.png" alt="Logo" width="80" height="80">
+							TensorFlow<span class="logo-part">.js</span>
+						</h2>
+					</section>
+				</section>
+				<section>
+					<section class="slide question" data-background="rgb(255, 102, 0)">
+						<h2 class="slide-heading">Who is using it?</h2>
+					</section>
+					<section class="slide" data-background="white" data-background-image="images/companies.png" data-background-size="contain">
+					</section>
+				</section>
+				<section>
+					<section class="slide question" data-background="rgb(255, 102, 0)">
+						<h2 class="slide-heading">What is providing TensorFlow.js for Front-end Developers?</h2>
 					</section>
 				</section>
 			</div>
