style: fix typo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<br>
 						<p class="fragment fade-in-then-semi-out fragment-with-year">
 							<span class="year thick-text marked-text">2011</span>
-							<span class="image-description">Propriatory library DistBelief</span>
+							<span class="image-description">Proprietary library DistBelief</span>
 						</p>
 						<p class="fragment fade-in-then-semi-out fragment-with-arrow">⬇</p>
 						<p class="fragment fade-in-then-semi-out fragment-with-year">
