fix: change slide content

--- a/index.html
+++ b/index.html
@@ -295,19 +295,32 @@
 					<section class="slide">
 						<h2 class="slide-heading">Important Things</h2>
 						<ul>
-							<li>Variables: <span class="marked-text">tf.variable</span><span class="shaded-text">()</span></li>
+							<li>Variables:
+								<span class="shaded-text">
+									method <span class="marked-text">variable</span>
+								</span>
+							</li>
 							<li>
 								Operations:
-								<span class="marked-text">tf.add</span><span class="shaded-text">()</span>, 
-								<span class="marked-text">tf.sub</span><span class="shaded-text">()</span>, 
-								<span class="marked-text">tf.mul</span><span class="shaded-text">()</span>, 
-								<span class="marked-text">tf.div</span><span class="shaded-text">()</span>,
-								<span class="marked-text">tf.matmul</span><span class="shaded-text">()</span>,
-								and so on...
+								<span class="shaded-text">
+									<span class="marked-text">add</span>, 
+									<span class="marked-text">sub</span>, 
+									<span class="marked-text">mul</span>, 
+									<span class="marked-text">div</span>,
+									<span class="marked-text">matmul</span>,
+									and so on...
+								</span>
 							</li>
-							<li>Memory Management: <span class="marked-text">tf.dispose</span><span class="shaded-text">()</span>, <span class="marked-text">tf.tidy</span><span class="shaded-text">()</span> </li>
+							<li>
+								Memory Management:
+								<span class="shaded-text">methods
+									<span class="marked-text">dispose</span>
+									and
+									<span class="marked-text">tidy</span>
+								</span>
+							</li>
 						</ul>
-						<p>See more at the <a href="https://js.tensorflow.org/api/0.13.3/#Operations">documentation page.</a></p>
+						<p class="bigger-top-margin">See more at the <a href="https://js.tensorflow.org/api/0.13.3/">documentation page.</a></p>
 						<aside class="notes">
 							<p>Immutable data structures.</p>
 							<p>If data are changed frequenlty use variables</p>
