fix: correct speaker notes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<aside class="notes">
 						<p>Hello...</p>
 						<p>Recently getting started...</p>
-						<p>Before going to...</p>
+						<p>But before going to...</p>
 					</aside>
 				</section>
 				<section>
@@ -68,7 +68,7 @@
 							<span class="image-description">Version 1.0 of TensorFlow</span>
 						</p>
 						<aside class="notes">
-							<p>2011 This is was Google proprietary library for Machine Learning applications, called DistBelief</p>
+							<p>2011 it was depeloped at Google...</p>
 							<p>2015 Apache license</p>
 						</aside>
 					</section>
@@ -84,7 +84,7 @@
 						<p class="fragment fade-in-then-semi-out smaller-text">Swift</p>
 						<p class="fragment fade-in-then-semi-out smaller-text">JavaScript</p>
 						<aside class="notes">
-							<p>library with a lot...</p>
+							<p>... library with a lot...</p>
 							<p>In the world of data science, Python is...</p>
 							<p>But TensorFlow works...</p>
 						</aside>
@@ -111,8 +111,8 @@
 							</tr>
 						</table>
 						<aside class="notes">
-							<p>It can run on multiple central or graphics processing units...</p>
-							<p>64-bit desktop...</p>
+							<p>It can run on multiple CPUs and GPUs and</p>
+							<p>available on 64-bit desktop...</p>
 							<p>and mobile devices including...</p>
 						</aside>
 					</section>
@@ -140,6 +140,7 @@
 						<p class="fragment fade-in-then-semi-out smaller-text no-margin">⬇</p>
 						<p class="fragment fade-in-then-semi-out grow">WebGL</p>
 						<aside class="notes">
+							<p>... 2017, Deplearn.js appeared, which aimed to enable ML</p>
 							<p>... JS code could not run on GPU</p>
 							<p>... WebGL was introduced</p>
 						</aside>
@@ -154,7 +155,7 @@
 							TensorFlow<span class="logo-part">.js</span>
 						</h2>
 						<aside class="notes">
-							<p>In March 2018 ... got merged</p>
+							<p>In March 2018 ... got merged, ... and renamed</p>
 						</aside>
 					</section>
 				</section>
@@ -178,7 +179,7 @@
 					</section>
 					<section class="slide" data-background="white" data-background-image="images/phone-sensors.png" data-background-size="contain">
 						<aside class="notes">
-							<p>It runs at laptops and mobile devices</p>
+							<p>It runs at laptops and mobile devices...</p>
 						</aside>
 					</section>
 					<section class="slide">
@@ -189,9 +190,8 @@
 							<li>Retrain existing models.</li>
 						</ul>
 						<aside class="notes">
-							<p>... using low-level linear algebra library, or high-level layers API</p>
-							<p>Use converters to run models</p>
-							<p>... using sensors</p>
+							<p>... directly in browser or under Node.js</p>
+							<p>... using sensor data connected</p>
 						</aside>
 					</section>
 				</section>
@@ -210,26 +210,37 @@
 						</ul>
 						<aside class="notes">
 							<p>Teachable Machine lets you teach itself to recognize...</p>
-							<p>Perfomarmance RNN - real-time piano performance...</p>
+							<p>Perfomarmance RNN - real-time piano performance by NN</p>
 						</aside>
 					</section>
 					<section class="slide">
 						<h2 class="slide-heading">Let's play in PACMAN!</h2>
 						<aside class="notes">
-							<p>I have made a gif-...</p>
+							<p>I have made a gif-animation ...</p>
 						</aside>
 					</section>
 					<section class="slide">
 						<h2 class="slide-heading marked-text">1. Setup Controller</h2>
+						<aside class="notes">
+							<p>Now I show you...</p>
+						</aside>
 					</section>
 					<section class="slide" data-background="black" data-background-image="images/pacman-setup.gif" data-background-size="contain">
+						<aside class="notes">
+							<p>First of all, I create...</p>
+						</aside>
 					</section>
 					<section class="slide">
 						<h2 class="slide-heading marked-text">2. Playing</h2>
+						<aside class="notes">
+							<p>When the controller is created, we ready to play!</p>
+						</aside>
 					</section>
 					<section class="slide" data-background="black" data-background-image="images/pacman-playing.gif" data-background-size="contain">
 						<aside class="notes">
-							<p>... pictogram... highlighted...</p>
+							<p>You can see the pictogram with the direction...</p>
+							<p>... highlighted orange</p>
+							<p>... I really don't use my hands</p>
 						</aside>
 					</section>
 					<section class="slide">
@@ -261,11 +272,10 @@
 					</section>
 					<section class="slide" data-background="white" data-background-image="images/runtime.png" data-background-size="contain">
 						<aside class="notes">
-							<p>... uses WebGl</p>
-							<p>... or compunig units under Node.js</p>
-							<p>CoreAPI = low-lewel API</p>
-							<p>LayersAPI = Primary building block for constuctiong a model</p>
-							<p>Models importing</p>
+							<p>... uses WebGl or C*U under Node.js</p>
+							<p>CoreAPI - low ... for linear algebra and automatic differentiation</p>
+							<p>LayersAPI - primary building block for constuctiong a ML model</p>
+							<p>Models importing are supported</p>
 						</aside>
 					</section>
 					<section class="slide">
@@ -288,8 +298,8 @@
 						</div>
 						<aside class="notes">
 							<p>So, what is a Tensor?</p>
-							<p>n-dimensional array with n bigger that 2</p>
-							<p>Core data structure!</p>
+							<p>... n-dimensional array with n bigger that 2</p>
+							<p>... core data structure!</p>
 						</aside>
 					</section>
 					<section class="slide">
@@ -322,11 +332,10 @@
 						</ul>
 						<p class="bigger-top-margin">See more at the <a href="https://js.tensorflow.org/api/0.13.3/">documentation page.</a></p>
 						<aside class="notes">
-							<p>Immutable data structures.</p>
-							<p>If data are changed frequenlty use variables</p>
-							<p>More operations on the documentation page</p>
-							<p>addition, substraction, multipluying, finding dot product, etc. - are basic operations used for Machine Learning</p>
-							<p>Memory management is a key in the ML tasks...</p>
+							<p>... if you want to study ML</p>
+							<p>Immutable data structures. Use variables.</p>
+							<p>Operations always return new... has many operations</p>
+							<p>Memory management is a key in the ML tasks... generally computionally expensive</p>
 						</aside>
 					</section>
 				</section>
@@ -345,7 +354,7 @@
 					<section class="slide" data-background="white" data-background-image="images/graph-2.png" data-background-size="contain">
 						<aside class="notes">
 							<p>And we need predict...</p>
-							<p>We know that Y will be 9, because we have some intellect.</p>
+							<p>We know that "y" will be 9, because we have some intellect.</p>
 							<p>Lets teach the machine!</p>
 						</aside>
 					</section>
@@ -369,18 +378,39 @@
 							15	  model.predict(tf.tensor2d([5], [1, 1])).print();
 							16	});
 						</code></pre>
+						<aside class="notes">
+							<p>With each new iteration, probability is increasing...</p>
+							<p>epochs - number of iterations</p>
+						</aside>
 					</section>
 					<section class="slide" data-background="white" data-background-image="images/graph-3.png" data-background-size="contain">
+						<aside class="notes">
+							<p>You can see...</p>
+						</aside>
 					</section>
 					<section class="slide" data-background="white" data-background-image="images/graph-4.png" data-background-size="contain">
+						<aside class="notes">
+							<p>...when "epochs" is increasing...</p>
+						</aside>
 					</section>
 					<section class="slide" data-background="white" data-background-image="images/graph-5.png" data-background-size="contain">
+						<aside class="notes">
+							<p>..."y" is approximate.</p>
+						</aside>	
 					</section>
 					<section class="slide">
 						<h2 class="slide-heading">Using pre-trained model</h2>
 						<p><a href="https://mikhama.github.io/image-recognition/" target="_blank">Image Recognition</a> with TensorFlow.js</p>
+						<aside class="notes">
+							<p>I have created...</p>
+							<p>... i order to show you...</p>
+							<p>... in real-life applications...</p>
+						</aside>	
 					</section>
 					<section class="slide" data-background="white" data-background-image="images/image-recognition.gif" data-background-size="contain">
+						<aside class="notes">
+							<p>My application is very simple to ...</p>
+						</aside>	
 					</section>
 					<section class="slide">
 						<h2 class="slide-heading">Code example</h2>
@@ -398,10 +428,19 @@
 							51	const prediction = await model.predict(tensor).data();
 						</code></pre>
 						<p>See the whole code on my <a href="https://github.com/mikhama/image-recognition" target="_blank">GitHub page</a></p>
+						<aside class="notes">
+							<p>I have only 10 lines ... related ...</p>
+							<p>... download MobileNet model</p>
+							<p>... loading -- preprocessing</p>
+							<p>... images are different</p>
+						</aside>	
 					</section>
 				</section>
 				<section class="slide question" data-background="rgb(255, 102, 0)">
 					<h2 class="slide-heading">Thank you!</h2>
+					<aside class="notes">
+						<p>As a conclusion...</p>
+					</aside>	
 				</section>
 			</div>
 		</div>
