--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 					</section>
 					<section class="slide" data-background="white" data-background-image="images/runtime.png" data-background-size="contain">
 						<aside class="notes">
-							<p>... uses WebGl or C*U under Node.js</p>
+							<p>... uses WebGl or PU under Node.js</p>
 							<p>CoreAPI - low ... for linear algebra and automatic differentiation</p>
 							<p>LayersAPI - primary building block for constuctiong a ML model</p>
 							<p>Models importing are supported</p>
@@ -360,20 +360,24 @@
 					</section>
 					<section class="slide">
 						<h2 class="slide-heading">Code example</h2>
-						<pre><code class="smaller-code" data-trim data-noescape>
+						<pre><code class="fragment smaller-code" data-fragment-index="0" data-trim data-noescape>
 							1	// 1. Define a model for linear regression
 							2	const model = tf.sequential();
 							3	model.add(tf.layers.dense({units: 1, inputShape: [1]}));
-							4	
+							4
+						</code><code class="fragment smaller-code" data-fragment-index="1" data-trim data-noescape>
 							5	// 2. Prepare the model for training
 							6	model.compile({loss: 'meanSquaredError', optimizer: 'sgd'});
 							7
+						</code><code class="fragment smaller-code" data-fragment-index="2" data-trim data-noescape>
 							8	// 3. Generate some synthetic data for training
 							9	const xs = tf.tensor2d([1, 2, 3, 4], [4, 1]);
 							10	const ys = tf.tensor2d([1, 3, 5, 7], [4, 1]);
 							11
+						</code><code class="fragment smaller-code" data-fragment-index="3" data-trim data-noescape>
 							12	// 4. Train the model using the data
-							13	model.fit(xs, ys, {epochs: 10}).then(() =&gt; {
+							13	model.fit(xs, ys, {<span class="fragment highlight-red" data-fragment-index="5">epochs: 10</span>}).then(() =&gt; {
+						</code><code class="fragment smaller-code" data-fragment-index="4" data-trim data-noescape>
 							14	  // 5. Use the model
 							15	  model.predict(tf.tensor2d([5], [1, 1])).print();
 							16	});
@@ -414,9 +418,10 @@
 					</section>
 					<section class="slide">
 						<h2 class="slide-heading">Code example</h2>
-						<pre><code class="smaller-code" data-trim data-noescape>
+						<pre><code class="fragment smaller-code" data-trim data-noescape>
 							 8	const model = await tf.loadModel('./model/model.json');
 								...
+						</code><code class="fragment smaller-code" data-trim data-noescape>
 							43	const offset = tf.scalar(127.5);
 							44	const tensor = tf.fromPixels(selectedImage)
 							45	  .resizeNearestNeighbor([224, 224])
@@ -427,7 +432,7 @@
 							50
 							51	const prediction = await model.predict(tensor).data();
 						</code></pre>
-						<p>See the whole code on my <a href="https://github.com/mikhama/image-recognition" target="_blank">GitHub page</a></p>
+						<p class="fragment">See the whole code on my <a href="https://github.com/mikhama/image-recognition" target="_blank">GitHub page</a></p>
 						<aside class="notes">
 							<p>I have only 10 lines ... related ...</p>
 							<p>... download MobileNet model</p>
